# lasagna-ai

./: .gitignore  .nojekyll  CNAME  LICENSE  LICENSE.txt  Makefile  README.md  about.html  index.html  installing.html  pyproject.toml  quickstart.html  robots.txt  search.json  sitemap.xml
.github/workflows/: docs-check.yml  docs-publish.yml  publish.yml  test.yml
agent_features/: caching.html  functional_agents.html  layering.html  parallelizing.html  recursive_agent.html  routing.html  structured_output.html  tools.html
deployment/: database.html  streaming.html  streaming_and_events.html
docs/: CNAME  _quarto.yml  about.ipynb  about.qmd  index.ipynb  index.qmd  installing.ipynb  quickstart.ipynb
docs/agent_features/: caching.ipynb  functional_agents.ipynb  index.qmd  layering.ipynb  parallelizing.ipynb  recursive_agent.ipynb  routing.ipynb  structured_output.ipynb  tools.ipynb
docs/deployment/: database.ipynb  index.qmd  streaming.ipynb  streaming_and_events.ipynb
docs/misc/: asyncio.ipynb  functional_programming.ipynb  index.qmd  python_asyncio.ipynb  python_type_hints.ipynb
docs/providers/: anthropic.ipynb  aws_bedrock.ipynb  index.qmd  nvidia.ipynb  ollama.ipynb  openai.ipynb
docs/recipes/: agents_as_tools.ipynb  committee.ipynb  delegating_subtasks.ipynb  index.qmd  internet_research.ipynb  lasagna_recursive_planning_agent.ipynb  layered_agents.ipynb  parallelize.ipynb  rag.ipynb  routing_agent.ipynb  sms.ipynb  swapping_providers.ipynb  vision.ipynb
docs/what_is_an_agent/: agent.ipynb  index.qmd  streaming_and_events.ipynb  type_agentrun.ipynb  what.ipynb
docs/why_lasagna_ai/: index.qmd  lasagna_vs_langchain.ipynb  lasagna_vs_llamaindex.ipynb
examples/: demo_committee.py  demo_internet_research.py  demo_layered_agents.py  demo_planner.py  demo_prompt_injection.py  demo_rag.py  demo_sms.py  demo_structured_output.py  demo_vision.py  quickstart.py  quickstart_with_math_tool.py
misc/: functional_programming.html  python_asyncio.html  python_type_hints.html
providers/: anthropic.html  aws_bedrock.html  nvidia.html  ollama.html  openai.html
recipes/: agents_as_tools.html  committee.html  delegating_subtasks.html  index.html  internet_research.html  lasagna_recursive_planning_agent.html  layered_agents.html  parallelize.html  rag.html  routing_agent.html  sms.html  swapping_providers.html  vision.html
site_libs/bootstrap/: bootstrap-67d7d124950b7fa853046764b801d6c3.min.css  bootstrap-6aff76eab3c07d4be3dbc4d12b035373.min.css  bootstrap-83ff3a71db0ec49e2591a4ae8a620606.min.css  bootstrap-9095bc3429ae4a3c2a46ce0670a82667.min.css  bootstrap-a0a7bec7e7bf44ff456b06a2434fb243.min.css  bootstrap-d0600255a03afcf1530d83fe56533a3e.min.css
src/lasagna/: __init__.py  abstract_model.py  agent_runner.py  agent_util.py  async_util.py  caching.py  easy.py  known_models.py  known_providers.py  lasagna_anthropic.py  lasagna_bedrock.py  lasagna_nvidia.py  lasagna_ollama.py  lasagna_openai.py  mock_provider.py  model_util.py  pydantic_util.py  registrar.py  stream.py  tools.py  tools_util.py  tui.py  types.py  util.py
src/lasagna/planner/: agent.py  default_prompts.py  util.py
src/lasagna/planner01/: debug_model.py
tests/: test_abstract_model.py  test_agent_runner.py  test_agent_util.py  test_async_util.py  test_caching.py  test_easy.py  test_known_providers.py  test_lasagna_anthropic.py  test_lasagna_bedrock.py  test_lasagna_ollama.py  test_lasagna_openai.py  test_pydantic_util.py  test_registrar.py  test_stream.py  test_thing.py  test_tools.py  test_tools_util.py  test_tui.py  test_util.py
tests/planner/: test_agent.py  test_default_prompts.py  test_util.py
tests/planner01/: test_agent.py  test_default_prompts.py  test_util.py
what_is_an_agent/: agent.html  index.html  type_agentrun.html  what.html
why_lasagna_ai/: lasagna_vs_langchain.html  lasagna_vs_llamaindex.html
